doc for add/remove chat
