# swagger.json
@@ -245,7 +245,7 @@
     },
     "/v1/users": {
       "post": {
-        "description": "Remove user from a chat",
+        "description": "Create new User",
         "tags": [
           "users"
         ],
@@ -255,7 +255,7 @@
           }
         ],
         "requestBody": {
-          "description": "Chat removal creation request body",
+          "description": "user creation request body",
           "required": true,
           "content": {
             "application/json": {
@@ -263,15 +263,15 @@
                 "$ref": "#/components/schemas/UserSchema"
               },
               "example": {
-                "userid": 1234,
-                "memberid": 1234
+                "name": "userName",
+                "email": "test.user@mail.com"
               }
             }
           }
         },
         "responses": {
-          "200": {
-            "description": "return updated user",
+          "201": {
+            "description": "return created user",
             "content": {
               "application/json": {
                 "schema": {
@@ -368,6 +368,114 @@
                       "$ref": "#/components/schemas/UserSchema"
                     }
                   ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/users/addChat": {
+      "post": {
+        "description": "Add user to a new chat",
+        "tags": [
+          "users"
+        ],
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "requestBody": {
+          "description": "Chat addition creation request body",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserSchema"
+              },
+              "example": {
+                "userid": 1234,
+                "memberid": 1234
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "return updated user",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/UserSchema"
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/users/removeChat": {
+      "post": {
+        "description": "Remove user from a chat",
+        "tags": [
+          "users"
+        ],
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "requestBody": {
+          "description": "Chat removal creation request body",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserSchema"
+              },
+              "example": {
+                "userid": 1234,
+                "memberid": 1234
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "return updated user",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/UserSchema"
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
                 }
               }
             }
